[project]
name = "swirl-bc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
]
