[project]
name = "swirl-bc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]

[dependency-groups]
dev = [
    "cohere>=7.0.5",
    "instructor>=1.15.4",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.0,<0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=1.1.9",
    "langgraph>=1.2.2",
    "langsmith>=0.8.16",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "openai>=2.44.0",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
]
