[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tzvetlin Velev", email = "tvelev@ameripharma.us" }
]
requires-python = ">=3.12"
dependencies = [
    "cohere>=7.0.5",
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "instructor>=1.15.4",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.9.3",
    "openai>=2.44.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
]
