[project]
name = "items-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tzvetlin Velev", email = "tvelev@ameripharma.us" }
]
requires-python = ">=3.12"
dependencies = [
    "cohere>=7.0.5",
    "fastmcp>=3.4.4",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
]

[project.scripts]
items-mcp-server = "items_mcp_server:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
